--- a/bookmanager/templates/book/index.html
+++ b/bookmanager/templates/book/index.html
@@ -5,7 +5,7 @@
     <title>book_index</title>
 </head>
 <body>
-<a href="#">{{ name }}</a>
+<a href="https://www.taobao.com">{{ name }}</a>
 <ul>
     <li>西游记</li>
     <li>三国演义</li>
